--- a/material/WebApi/WebApi.csproj
+++ b/material/WebApi/WebApi.csproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
