--- a/material/WebApi/appsettings.json
+++ b/material/WebApi/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "variable": "This is producction!"
 }
